Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116743

Mesh.Point does not get rotated to face camera in Optimization.Default

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.0 FF
    • 6.6.0 Beta3
    • Graphs: 3D
    • None
    • 6438a875d (dev)

      Reproducible with qmlperf manual test:

      • click Change x 3 (to Mesh.Point)
      • click To Default to activate Optimization.Default, which uses instancing

      -> points do not face the camera when the scene rotates

        For Gerrit Dashboard: QTBUG-116743
        # Subject Branch Project Status CR V

            oulu_hillbilly Sami Varanka
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes