Handle optimization hint change in scatter graph

If optimization hint is changed during runtime,
react to it by removing the old graph visuals.

Fixes: QTBUG-116743
Change-Id: I63509925bf1ca2e3b2cd301c8a22e2661a5bf5e1
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>